Reapply "Initial commit: FoodExpress Full-Stack Java Application"
This reverts commit 8e382cc3a7e06702e23461a57760c512d46252ca.